--- a/style.css
+++ b/style.css
@@ -1,3 +1,50 @@
 body{
     background-color: aqua;
+    color:#fff ;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    margin: 0;
 }
+.film{
+    margin: 20px 0;
+}
+.film select{
+    background-color: #fff;
+    border: 0;
+    border-radius: 5px;
+    margin-left: 10px;
+    padding: 5px 15 px 5 px 15 px;
+    appearance: none;
+}
+.container{
+    perspective: 1000px;
+    margin-bottom: 30px;
+
+}
+.seat{
+    background-color: #444451;
+    height: 12px;
+    width: 15px;
+    margin:3px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+
+}
+.seat.selected{
+    background-color: #6feaf6;
+
+}
+.seat.occupied{
+    background-color: #efff;
+
+}
+.seat:nth-of-type(2){
+    margin-right: 18px;
+}
+.seat:nth-last-of-type(2){
+    margin-left: 18px;
+}
+
