--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: aqua;
+    background-color: rgb(243, 169, 57);
     color:rgb(19, 18, 18) ;
     display: flex;
     flex-direction: column;
